--- a/frontend/service/profile.html
+++ b/frontend/service/profile.html
@@ -28,15 +28,15 @@
             display: none;
         }
 
-        .profile-picture-container:hover #change-picture {
-            display: block;
-        }
-
         .profile-picture {
             border-radius: 50%;
             height: 500px;
             width: 500px;
             object-fit: cover;
+        }
+
+        canvas.profile-picture {
+            background-color: transparent;
         }
     </style>
 </head>
@@ -54,7 +54,7 @@
             <div class="d-flex justify-content-center">
                 <div class="d-flex flex-column align-items-center">
                     <div class="profile-picture-container mb-2">
-                        <img id="profile-picture" src=https://avatars.githubusercontent.com/u/131959167?v=4" alt="profile picture" class="profile-picture">
+                        <img id="profile-picture" src="https://avatars.githubusercontent.com/u/131959167?v=4" alt="profile picture" class="profile-picture">
                         <button id="change-picture" class="btn ctm-btn">Change</button>
                     </div>
                     <h3 id="username" class="ctm-text-light"></h3>
@@ -68,56 +68,56 @@
                 </div>
             </div>
         </div>
-    </main>
-
-    <main id="customize-section" class="container mt-5 blinking-neon-frame" style="display: none;">
-        <div id="customize-photo" class="ctm-card position-relative">
-            <h2 class="text-center ctm-text-title">Customize profile photo</h2>
-            <div class="d-flex justify-content-center">
-                <div class="d-flex flex-column align-items-center">
-                    <div class="profile-picture-container mb-2">
-                        <div id="carouselExample" class="carousel slide">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="/placeholder.svg?height=500&width=500" class="d-block profile-picture" alt="Avatar 1">
+        <main id="customize-section" class="container mt-5 blinking-neon-frame" style="display: none;">
+            <div id="customize-photo" class="ctm-card position-relative">
+                <h2 class="text-center ctm-text-title">Customize profile photo</h2>
+                <div class="d-flex justify-content-center">
+                    <div class="d-flex flex-column align-items-center">
+                        <div class="profile-picture-container mb-2">
+                            <div id="carouselExample" class="carousel slide">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <canvas id="avatarCanvas1" class="d-block profile-picture" alt="Avatar 1"></canvas>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <canvas id="avatarCanvas2" class="d-block profile-picture" alt="Avatar 2"></canvas>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <canvas id="avatarCanvas3" class="d-block profile-picture" alt="Avatar 3"></canvas>
+                                    </div>
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="/placeholder.svg?height=500&width=500" class="d-block profile-picture" alt="Avatar 2">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="/placeholder.svg?height=500&width=500" class="d-block profile-picture" alt="Avatar 3">
-                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                                <div class="ctm-text-light text-center">slide to change style</div>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                            <div class="ctm-text-light text-center">slide to change style</div>
+                            <div class="container d-flex justify-content-center m-3">
+                                <button id="change-avatar-color" class="btn ctm-btn me-2">Change Avatar Color</button>
+                                <input type="color" id="avatar-color-picker" style="display: none;">
+                                <button id="change-background-color" class="btn ctm-btn">Change Background</button>
+                                <input type="color" id="background-color-picker" style="display: none;">
+                            </div>
                         </div>
-                        <div class="container d-flex justify-content-center m-3">
-                            <button id="change-avatar-color" class="btn ctm-btn me-2">Change Avatar Color</button>
-                            <input type="color" id="avatar-color-picker" style="display: none;">
-                            <button id="change-background-color" class="btn ctm-btn">Change Background</button>
-                            <input type="color" id="background-color-picker" style="display: none;">
+                        <div class="d-flex m-2">
+                            <div class="ctm-text-light">or upload your own image</div>
+                            <button id="upload-image" class="ctm-btn ms-2">Upload</button>
+                            <input type="file" id="file-input" accept="image/*" style="display: none;">
                         </div>
-                    </div>
-                    <div class="d-flex m-2">
-                        <div class="ctm-text-light">or upload your own image</div>
-                        <button id="upload-image" class="ctm-btn ms-2">Upload</button>
-                        <input type="file" id="file-input" accept="image/*" style="display: none;">
-                    </div>
-                    <div class="mt-2">
-                        <button id="save-custom-photo" class="btn ctm-btn">Save changes</button>
-                        <button id="cancel-custom-photo" class="btn ctm-btn ms-2">Cancel</button>
+                        <div class="mt-2">
+                            <button id="save-custom-photo" class="btn ctm-btn">Save changes</button>
+                            <button id="cancel-custom-photo" class="btn ctm-btn ms-2">Cancel</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
     </main>
+
 
     <script>
         const user = {
@@ -150,6 +150,12 @@
             backgroundColorPicker: document.getElementById('background-color-picker')
         };
 
+        const avatarImages = [
+            './resources/avatar/pngtree-man-avatar-isolated-on-white-background-png-image_4891418.png',
+            'https://png.pngtree.com/png-vector/20220608/ourmid/pngtree-man-avatar-isolated-on-white-background-png-image_4891418.png',
+            'https://png.pngtree.com/png-vector/20220608/ourmid/pngtree-man-avatar-isolated-on-white-background-png-image_4891418.png',
+        ];
+
         function renderUserData() {
             elements.username.textContent = user.username;
             elements.registration.textContent = `Registered on: ${user.registration}`;
@@ -180,6 +186,39 @@
             }
         }
 
+        function loadImageToCanvas(canvas, src) {
+            return new Promise((resolve) => {
+                const context = canvas.getContext('2d');
+                const img = new Image();
+                img.crossOrigin = "anonymous";
+                img.src = src;
+                img.onload = function() {
+                    canvas.width = 500;
+                    canvas.height = 500;
+                    context.clearRect(0, 0, canvas.width, canvas.height);
+                    context.drawImage(img, 0, 0, 500, 500);
+                    resolve();
+                };
+            });
+        }
+
+        function changeAvatarColor(canvas, color) {
+            const context = canvas.getContext('2d');
+            const imageData = context.getImageData(0, 0, canvas.width, canvas.height);
+            const data = imageData.data;
+
+            for (let i = 0; i < data.length; i += 4) {
+                // Check if the pixel is not transparent and not white
+                if (data[i + 3] !== 0 && !(data[i] > 200 && data[i + 1] > 200 && data[i + 2] > 200)) {
+                    data[i] = parseInt(color.slice(1, 3), 16);     // Red
+                    data[i + 1] = parseInt(color.slice(3, 5), 16); // Green
+                    data[i + 2] = parseInt(color.slice(5, 7), 16); // Blue
+                }
+            }
+
+            context.putImageData(imageData, 0, 0);
+        }
+
         elements.editProfile.addEventListener('click', () => toggleEditMode(true));
 
         elements.saveChanges.addEventListener('click', () => {
@@ -201,16 +240,16 @@
             if (file) {
                 const reader = new FileReader();
                 reader.onload = (e) => {
-                    const img = document.querySelector('.carousel-item.active img');
-                    img.src = e.target.result;
+                    const activeCanvas = document.querySelector('.carousel-item.active canvas');
+                    loadImageToCanvas(activeCanvas, e.target.result);
                 };
                 reader.readAsDataURL(file);
             }
         });
 
         elements.saveCustomPhoto.addEventListener('click', () => {
-            const selectedAvatar = document.querySelector('.carousel-item.active img');
-            user.profilePicture = selectedAvatar.src;
+            const selectedCanvas = document.querySelector('.carousel-item.active canvas');
+            user.profilePicture = selectedCanvas.toDataURL();
             elements.profilePicture.src = user.profilePicture;
             elements.profileSection.style.display = 'block';
             elements.customizeSection.style.display = 'none';
@@ -227,9 +266,8 @@
 
         elements.avatarColorPicker.addEventListener('change', (event) => {
             const selectedColor = event.target.value;
-            document.querySelectorAll('.profile-picture').forEach(img => {
-                img.style.backgroundColor = selectedColor;
-            });
+            const activeCanvas = document.querySelector('.carousel-item.active canvas');
+            changeAvatarColor(activeCanvas, selectedColor);
         });
 
         elements.backgroundColorButton.addEventListener('click', () => {
@@ -238,10 +276,25 @@
 
         elements.backgroundColorPicker.addEventListener('change', (event) => {
             const selectedColor = event.target.value;
-            document.body.style.backgroundColor = selectedColor;
+            document.querySelectorAll('.profile-picture').forEach(img => {
+                img.style.backgroundColor = selectedColor;
+            });
         });
 
-        renderUserData();
+        window.onload = function() {
+            const canvases = [
+                document.getElementById('avatarCanvas1'),
+                document.getElementById('avatarCanvas2'),
+                document.getElementById('avatarCanvas3')
+            ];
+
+            Promise.all(canvases.map((canvas, index) => loadImageToCanvas(canvas, avatarImages[index])))
+                .then(() => {
+                    console.log('All avatars loaded');
+                });
+
+            renderUserData();
+        };
     </script>
     <script src="neon.js"></script>
     <script src="login.js"></script>
