--- a/chess_game/index.html
+++ b/chess_game/index.html
@@ -4,16 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="Styles/index.css">
   <title>Chess Game</title>
 </head>
 <!-- Cuerpo del documento donde se coloca el contenido visible -->
 
-<body class="d-flex">
+<body class="d-flex mt-4">
   <!-- Contenedor principal donde se renderizará el tablero de ajedrez y otros elementos del juego -->
   <div id="root"></div>
   <div id="move_logger">
-    <ol></ol>
+    <div class="d-flex p-4 justify-content-center">
+      <div id="leftCol"class="col ms-3"></div>
+      <div id="rightCol" class="col ms-5"></div>
+    </div>
   </div>
   <!-- Enlaza el archivo JavaScript principal y lo define como un módulo ES6 -->
   <script type="module" src="index.js">
