--- a/chess_game/index.html
+++ b/chess_game/index.html
@@ -7,66 +7,44 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="Styles/index.css">
   <title>Chess Game</title>
-  <style>
-    .tile-x {
-    text-align: center;
-    height: 32px;
-    width: 80px;
-    padding-left: 20px;
-    margin-top: 7px;
-    
-
-/*     margin-bottom: 20px; */
-    }
-    .tile-y {
-    text-align: center;
-    height: 80px;
-    width: 40px;
-    padding-top: 24px;
-/*     margin-left: 10px;
-    margin-right: 10px; */
-    }
-  </style>
 </head>
 <!-- Cuerpo del documento donde se coloca el contenido visible -->
-
 <body class="d-flex mt-4">
   <!-- Contenedor principal donde se renderizará el tablero de ajedrez y otros elementos del juego -->
-  <div id="chess-container" class="bg-primary text-white">
-    <div id="alpha-coord" class="row w-100 bg-danger ms-0">
-      <div class="" style="width: 40px; height: 40px;"></div>
-      <div class="tile-x">a</div>
-      <div class="tile-x">b</div>
-      <div class="tile-x">c</div>
-      <div class="tile-x">d</div>
-      <div class="tile-x">e</div>
-      <div class="tile-x">f</div>
-      <div class="tile-x">g</div>
-      <div class="tile-x">h</div>
-    </div>
+  <div id="chess-container">
+    <div id="alpha-coord" class="row w-100 ms-0"></div>
     <div class="d-flex">
-      <div id="num-coord" class="d-flex flex-column">
-        <div class="tile-y">8</div>
-        <div class="tile-y">7</div>
-        <div class="tile-y">6</div>
-        <div class="tile-y">5</div>
-        <div class="tile-y">4</div>
-        <div class="tile-y">3</div>
-        <div class="tile-y">2</div>
-        <div class="tile-y">1</div>
-      </div>
+      <div id="num-coord" class="d-flex flex-column"></div>
       <div id="root"> </div>
+      <div id="num-coord-right" class="d-flex flex-column"></div>
     </div>
+    <div id="alpha-coord-bottom" class="row w-100 ms-0"></div>
   </div>
   <div id="move_logger">
     <div class="d-flex p-4 justify-content-center">
-      <div id="leftCol"class="col ms-3"></div>
+      <div id="leftCol" class="col ms-3"></div>
       <div id="rightCol" class="col ms-5"></div>
     </div>
   </div>
   <!-- Enlaza el archivo JavaScript principal y lo define como un módulo ES6 -->
-  <script type="module" src="index.js">
+  <script type="module" src="index.js"></script>
+  <script>
+    function generateCoordinates() {
+      const alphaCoord = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'];
+      const numCoord = ['8', '7', '6', '5', '4', '3', '2', '1'];
+
+      const alphaCoordContainer = document.getElementById('alpha-coord');
+      const alphaCoordBottomContainer = document.getElementById('alpha-coord-bottom');
+      const numCoordContainer = document.getElementById('num-coord');
+      const numCoordRightContainer = document.getElementById('num-coord-right');
+
+      alphaCoordContainer.innerHTML = '<div class="empty-tile""></div>' + alphaCoord.map(letter => `<div class="tile-x">${letter}</div>`).join('');
+      alphaCoordBottomContainer.innerHTML = '<div class="empty-tile""></div>' + alphaCoord.map(letter => `<div class="tile-x">${letter}</div>`).join('');
+      numCoordContainer.innerHTML = numCoord.map(number => `<div class="tile-y">${number}</div>`).join('');
+      numCoordRightContainer.innerHTML = numCoord.map(number => `<div class="tile-y">${number}</div>`).join('');
+    }
+
+    document.addEventListener('DOMContentLoaded', generateCoordinates);
   </script>
 </body>
-
 </html>
