--- a/chess_game/index.html
+++ b/chess_game/index.html
@@ -25,6 +25,15 @@
       <div id="leftCol" class="col ms-3"></div>
       <div id="rightCol" class="col ms-5"></div>
     </div>
+    <!-- Nueva sección para los botones -->
+    <div id="button-container" class="d-flex justify-content-center mt-3">
+      <button id="button1" class="btn btn-secondary mx-2">
+        <img src="Assets\icons\settings_icon.png" alt="Button 1 Image" class="button-image">
+      </button>
+      <button id="button2" class="btn btn-secondary mx-2">
+        <img src="Assets\icons\flag_icon.png" alt="Button 2 Image" class="button-image">
+      </button>
+    </div>
   </div>
   <!-- Enlaza el archivo JavaScript principal y lo define como un módulo ES6 -->
   <script type="module" src="index.js"></script>
