--- a/chess_game/index.html
+++ b/chess_game/index.html
@@ -27,10 +27,10 @@
     </div>
     <!-- Nueva sección para los botones -->
     <div id="button-container" class="d-flex justify-content-center mt-3">
-      <button id="button1" class="btn btn-secondary mx-2">
+      <button id="button1" class="btn btn-secondary mx-2" title="Settings">
         <img src="Assets\icons\settings_icon.png" alt="Button 1 Image" class="button-image">
       </button>
-      <button id="button2" class="btn btn-secondary mx-2">
+      <button id="button2" class="btn btn-secondary mx-2" title="Resign">
         <img src="Assets\icons\flag_icon.png" alt="Button 2 Image" class="button-image">
       </button>
     </div>
