--- a/chess_game/index.html
+++ b/chess_game/index.html
@@ -35,6 +35,31 @@
       </button>
     </div>
   </div>
+
+  <!-- Panel de configuración -->
+  <div id="settings-panel" class="settings-panel hidden">
+    <h3>Customize Your Chess Game</h3>
+    <div class="option">
+      <label for="piece-style">Piece Style:</label>
+      <select id="piece-style">
+        <option value="Neo">Modern</option>
+        <option value="Classic">Classic</option>
+        <option value="Fantasy">Fantasy</option>
+      </select>
+    </div>
+    <div class="option">
+      <label for="board-color">Board Color:</label>
+      <select id="board-color">
+        <option value=white:#84cca3;black:#5c3973>Green</option>
+        <option value=white:#edd6b0;black:#b88762>Brown</option>
+        <option value=white:#ffffff;black:#000000>Black</option>
+        <option value=white:#687182;black:#232a36>Glass</option>
+      </select>
+    </div>
+    <button id="save-settings" class="btn btn-primary">Save</button>
+    <button id="cancel-settings" class="btn btn-secondary">Cancel</button>
+  </div>
+
   <!-- Enlaza el archivo JavaScript principal y lo define como un módulo ES6 -->
   <script type="module" src="index.js"></script>
   <script>
