--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <!--  -->
-        <div class="modal fade" id="exit-game-modal" tabindex="-1" aria-labelledby="waitGameLabel" aria-hidden="true">
+<!--         <div class="modal fade" id="exit-game-modal" tabindex="-1" aria-labelledby="waitGameLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- sidebar -->
     <div id="sidebar-container" style="display: none;"></div>
     <!-- main content -->
