--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./components/friends/styles.css">
     <link rel="stylesheet" href="./components/stats/styles.css">
     <link rel="stylesheet" href="./components/tournament/styles.css">
+    <link rel="stylesheet" href="./components/chess/styles.css">
 </head>
 <body>
     <!-- navbar -->
