--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./components/stats/styles.css">
     <link rel="stylesheet" href="./components/tournament/styles.css">
     <link rel="stylesheet" href="./components/chess/styles.css">
+    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>-->
 </head>
 <body>
     <!-- navbar -->
