--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./components/index/styles.css">
     <link rel="stylesheet" href="./components/chat/styles.css">
     <link rel="stylesheet" href="./components/sidebar/styles.css">
-    <link rel="stylesheet" href="./components/start-game/styles.css">
+    <link rel="stylesheet" href="./components/home/styles.css">
     <link rel="stylesheet" href="./components/profile/styles.css">
     <link rel="stylesheet" href="./components/friends/styles.css">
     <link rel="stylesheet" href="./components/stats/styles.css">
@@ -49,7 +49,7 @@
     <script type="module" src="app/auth.js"></script>
     <script type="module" src="components/chat/app.js"></script>
     <script type="module" src="components/sidebar/app.js"></script>
-    <script type="module" src="components/start-game/app.js"></script>
+    <script type="module" src="components/home/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
